// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Upcoming Donation Screen Beilinson 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="MenuIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        <img
          alt="Blood Bank"
          className="logoImage"
          src="blood-bank-zichron-Little-logo.svg"
        />
         🛠
      </div>
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium login muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <p
          className="login_text"
        >
          כניסה
        </p>
        <img
          alt="התחבר"
          src="profile-icon.svg"
        />
      </button>
    </div>
    <div
      className="content"
    >
      <div
        className="pinkContainer"
      >
        <div
          className="welcome"
        >
          <img
            alt="illustration"
            className="illustration"
            src="exists appointment.svg"
          />
          <div
            className="welcomeTitle"
          >
            <div>
              היי
            </div>
            <div>
              משה כהן
              ,
            </div>
            <div
              className="welcomeText"
            >
              בקרוב ניפגש
            </div>
          </div>
        </div>
        <div
          className="appointmentDetails"
        >
          <div
            className="card"
          >
            <div
              className="detailsTitleContainer"
            >
              <div
                className="detailsTitle"
              >
                פרטי התור שלך:
              </div>
              <div
                className="cancelButton"
                onClick={[Function]}
              >
                ביטול תור
                <img
                  alt="Cancel"
                  className="cancelIcon"
                  src="trash.svg"
                />
              </div>
            </div>
            <div
              className="detailsText"
            >
              <div
                className="detailLabel"
              >
                איפה?
              </div>
              <div
                className="detailValue"
              >
                בית החולים
                 בילינסון
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                אני צריכ/ה הסעה
              </div>
              <div
                className="detailLabel"
              >
                מתי?
              </div>
              <div
                className="detailValue"
              >
                יום ו׳, 13.8, 12:00
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                הוספה ליומן
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="moreInfo"
      >
        <div
          className="moreInfoTitle"
        >
          טיפים ומידע נוסף
        </div>
        <ul
          className="tipList"
        >
          <li>
            משך התרומה - בין שעה וחצי לשעתיים.
          </li>
          <li>
            יש להביא תעודת זהות.
          </li>
          <li>
            יש לשתות מים ולאכול פירות לפני התרומה.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Upcoming Donation Screen Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="MenuIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        <img
          alt="Blood Bank"
          className="logoImage"
          src="blood-bank-zichron-Little-logo.svg"
        />
         🛠
      </div>
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium login muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <p
          className="login_text"
        >
          כניסה
        </p>
        <img
          alt="התחבר"
          src="profile-icon.svg"
        />
      </button>
    </div>
    <div
      className="content"
    >
      <div
        className="pinkContainer"
      >
        <div
          className="welcome"
        >
          <img
            alt="illustration"
            className="illustration"
            src="exists appointment.svg"
          />
          <div
            className="welcomeTitle"
          >
            <div>
              היי
            </div>
            <div>
              משה כהן
              ,
            </div>
            <div
              className="welcomeText"
            >
              בקרוב ניפגש
            </div>
          </div>
        </div>
        <div
          className="appointmentDetails"
        >
          <div
            className="card"
          >
            <div
              className="detailsTitleContainer"
            >
              <div
                className="detailsTitle"
              >
                פרטי התור שלך:
              </div>
              <div
                className="cancelButton"
                onClick={[Function]}
              >
                ביטול תור
                <img
                  alt="Cancel"
                  className="cancelIcon"
                  src="trash.svg"
                />
              </div>
            </div>
            <div
              className="detailsText"
            >
              <div
                className="detailLabel"
              >
                איפה?
              </div>
              <div
                className="detailValue"
              >
                בית החולים
                 רמב"ם
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                אני צריכ/ה הסעה
              </div>
              <div
                className="detailLabel"
              >
                מתי?
              </div>
              <div
                className="detailValue"
              >
                יום ו׳, 13.8, 12:00
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                הוספה ליומן
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="moreInfo"
      >
        <div
          className="moreInfoTitle"
        >
          טיפים ומידע נוסף
        </div>
        <ul
          className="tipList"
        >
          <li>
            משך התרומה - בין שעה וחצי לשעתיים.
          </li>
          <li>
            יש להביא תעודת זהות.
          </li>
          <li>
            יש לשתות מים ולאכול פירות לפני התרומה.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Upcoming Donation Screen Ichilov 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="MenuIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        <img
          alt="Blood Bank"
          className="logoImage"
          src="blood-bank-zichron-Little-logo.svg"
        />
         🛠
      </div>
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium login muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <p
          className="login_text"
        >
          כניסה
        </p>
        <img
          alt="התחבר"
          src="profile-icon.svg"
        />
      </button>
    </div>
    <div
      className="content"
    >
      <div
        className="pinkContainer"
      >
        <div
          className="welcome"
        >
          <img
            alt="illustration"
            className="illustration"
            src="exists appointment.svg"
          />
          <div
            className="welcomeTitle"
          >
            <div>
              היי
            </div>
            <div>
              משה כהן
              ,
            </div>
            <div
              className="welcomeText"
            >
              בקרוב ניפגש
            </div>
          </div>
        </div>
        <div
          className="appointmentDetails"
        >
          <div
            className="card"
          >
            <div
              className="detailsTitleContainer"
            >
              <div
                className="detailsTitle"
              >
                פרטי התור שלך:
              </div>
              <div
                className="cancelButton"
                onClick={[Function]}
              >
                ביטול תור
                <img
                  alt="Cancel"
                  className="cancelIcon"
                  src="trash.svg"
                />
              </div>
            </div>
            <div
              className="detailsText"
            >
              <div
                className="detailLabel"
              >
                איפה?
              </div>
              <div
                className="detailValue"
              >
                בית החולים
                 איכילוב
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                אני צריכ/ה הסעה
              </div>
              <div
                className="detailLabel"
              >
                מתי?
              </div>
              <div
                className="detailValue"
              >
                יום ו׳, 13.8, 12:00
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                הוספה ליומן
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="moreInfo"
      >
        <div
          className="moreInfoTitle"
        >
          טיפים ומידע נוסף
        </div>
        <ul
          className="tipList"
        >
          <li>
            תרומה אורכת כשעה וחצי.
          </li>
          <li>
            ניתן לאכול ולשתות כרגיל לפני התרומה.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Upcoming Donation Screen Soroka 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="MenuIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        <img
          alt="Blood Bank"
          className="logoImage"
          src="blood-bank-zichron-Little-logo.svg"
        />
         🛠
      </div>
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium login muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <p
          className="login_text"
        >
          כניסה
        </p>
        <img
          alt="התחבר"
          src="profile-icon.svg"
        />
      </button>
    </div>
    <div
      className="content"
    >
      <div
        className="pinkContainer"
      >
        <div
          className="welcome"
        >
          <img
            alt="illustration"
            className="illustration"
            src="exists appointment.svg"
          />
          <div
            className="welcomeTitle"
          >
            <div>
              היי
            </div>
            <div>
              משה כהן
              ,
            </div>
            <div
              className="welcomeText"
            >
              בקרוב ניפגש
            </div>
          </div>
        </div>
        <div
          className="appointmentDetails"
        >
          <div
            className="card"
          >
            <div
              className="detailsTitleContainer"
            >
              <div
                className="detailsTitle"
              >
                פרטי התור שלך:
              </div>
              <div
                className="cancelButton"
                onClick={[Function]}
              >
                ביטול תור
                <img
                  alt="Cancel"
                  className="cancelIcon"
                  src="trash.svg"
                />
              </div>
            </div>
            <div
              className="detailsText"
            >
              <div
                className="detailLabel"
              >
                איפה?
              </div>
              <div
                className="detailValue"
              >
                בית החולים
                 סורוקה
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                אני צריכ/ה הסעה
              </div>
              <div
                className="detailLabel"
              >
                מתי?
              </div>
              <div
                className="detailValue"
              >
                יום ו׳, 13.8, 12:00
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                הוספה ליומן
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="moreInfo"
      >
        <div
          className="moreInfoTitle"
        >
          טיפים ומידע נוסף
        </div>
        <ul
          className="tipList"
        >
          <li>
            לשאלות ובירורים ניתן לפנות ליחידת ההתרמות של סורוקה בטלפון 08−6400138.
          </li>
          <li>
            משך התרומה - בין שעה וחצי לשעתיים.
          </li>
          <li>
            יש להביא תעודת זהות.
          </li>
          <li>
            יש לשתות מים ולאכול פירות לפני התרומה.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Upcoming Donation Screen Tel Hashomer 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="MenuIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        <img
          alt="Blood Bank"
          className="logoImage"
          src="blood-bank-zichron-Little-logo.svg"
        />
         🛠
      </div>
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium login muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <p
          className="login_text"
        >
          כניסה
        </p>
        <img
          alt="התחבר"
          src="profile-icon.svg"
        />
      </button>
    </div>
    <div
      className="content"
    >
      <div
        className="pinkContainer"
      >
        <div
          className="welcome"
        >
          <img
            alt="illustration"
            className="illustration"
            src="exists appointment.svg"
          />
          <div
            className="welcomeTitle"
          >
            <div>
              היי
            </div>
            <div>
              משה כהן
              ,
            </div>
            <div
              className="welcomeText"
            >
              בקרוב ניפגש
            </div>
          </div>
        </div>
        <div
          className="appointmentDetails"
        >
          <div
            className="card"
          >
            <div
              className="detailsTitleContainer"
            >
              <div
                className="detailsTitle"
              >
                פרטי התור שלך:
              </div>
              <div
                className="cancelButton"
                onClick={[Function]}
              >
                ביטול תור
                <img
                  alt="Cancel"
                  className="cancelIcon"
                  src="trash.svg"
                />
              </div>
            </div>
            <div
              className="detailsText"
            >
              <div
                className="detailLabel"
              >
                איפה?
              </div>
              <div
                className="detailValue"
              >
                בית החולים
                 תל השומר
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                אני צריכ/ה הסעה
              </div>
              <div
                className="detailLabel"
              >
                מתי?
              </div>
              <div
                className="detailValue"
              >
                יום ו׳, 13.8, 12:00
              </div>
              <div
                className="link"
                onClick={[Function]}
              >
                הוספה ליומן
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="moreInfo"
      >
        <div
          className="moreInfoTitle"
        >
          טיפים ומידע נוסף
        </div>
        <ul
          className="tipList"
        >
          <li>
            לשאלות ובירורים ניתן לפנות ליחידת ההתרמות של תל השומר בטלפון 03−5305375.
          </li>
          <li>
            משך התרומה - בין שעה וחצי לשעתיים.
          </li>
          <li>
            יש להביא תעודת זהות.
          </li>
          <li>
            מומלץ לאכול ולשתות כרגיל לפני התרומה.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
